[gd_scene load_steps=2 format=3 uid="uid://7cld2fnd8lwf"]

[ext_resource type="Script" uid="uid://c4sfme58j5xwo" path="res://scene/float_arg_modifier.gd" id="1_pciw1"]

[node name="FloatArgModifier" type="HBoxContainer"]
offset_right = 541.0
offset_bottom = 31.0
script = ExtResource("1_pciw1")
hard_min_value = 1.0
hard_max_value = 2.0
min_value = 1.0
max_value = 2.0
current_value = 2.0

[node name="ArgNameLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
bbcode_enabled = true
text = "Contrast"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="MinSpinBox" type="SpinBox" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = -1.0
max_value = 3.0
step = 0.0
value = 1.0
allow_greater = true
allow_lesser = true
select_all_on_focus = true

[node name="MaxSpinBox" type="SpinBox" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = -1.0
max_value = 3.0
step = 0.0
value = 2.0
allow_greater = true
allow_lesser = true
select_all_on_focus = true

[node name="Slider" type="HSlider" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
max_value = 2.0
step = 0.01
value = 1.0

[node name="CurrentValueEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "1.012124"
alignment = 1

[node name="CurrentSpinBox" type="SpinBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 2.0
step = 0.0
value = 1.0
select_all_on_focus = true
